Data generation and use the right columns

--- a/data/DUAL_undersampling.ipynb
+++ b/data/DUAL_undersampling.ipynb
@@ -19,8 +19,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-05-30T18:12:49.373841Z",
-     "start_time": "2025-05-30T18:12:49.365882Z"
+     "end_time": "2025-06-06T13:44:33.592649Z",
+     "start_time": "2025-06-06T13:44:30.731384Z"
     }
    },
    "source": [
@@ -31,39 +31,39 @@
     "import pandas as pd\n"
    ],
    "outputs": [],
-   "execution_count": 28
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-30T18:12:49.526718Z",
-     "start_time": "2025-05-30T18:12:49.490516Z"
+     "end_time": "2025-06-06T13:44:37.850094Z",
+     "start_time": "2025-06-06T13:44:37.834076Z"
     }
    },
    "cell_type": "code",
    "source": "df_m = pd.read_csv('../dataset/minority.csv')",
    "id": "39094137c1a30f59",
    "outputs": [],
-   "execution_count": 29
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-30T18:12:52.469806Z",
-     "start_time": "2025-05-30T18:12:49.630360Z"
+     "end_time": "2025-06-06T13:44:42.224471Z",
+     "start_time": "2025-06-06T13:44:38.481911Z"
     }
    },
    "cell_type": "code",
    "source": "df = pd.read_csv('../dataset/majority.csv')",
    "id": "eeda159a0a259427",
    "outputs": [],
-   "execution_count": 30
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-30T18:12:53.792277Z",
-     "start_time": "2025-05-30T18:12:52.480333Z"
+     "end_time": "2025-06-06T13:44:43.365167Z",
+     "start_time": "2025-06-06T13:44:42.229003Z"
     }
    },
    "cell_type": "code",
@@ -88,13 +88,13 @@
    ],
    "id": "f7f9e18c10c9b044",
    "outputs": [],
-   "execution_count": 31
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-30T18:12:53.948726Z",
-     "start_time": "2025-05-30T18:12:53.824996Z"
+     "end_time": "2025-06-06T13:44:43.922325Z",
+     "start_time": "2025-06-06T13:44:43.798282Z"
     }
    },
    "cell_type": "code",
@@ -108,13 +108,13 @@
    ],
    "id": "d540422159e6bd7d",
    "outputs": [],
-   "execution_count": 32
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-30T18:12:54.762214Z",
-     "start_time": "2025-05-30T18:12:54.754053Z"
+     "end_time": "2025-06-06T13:44:46.348588Z",
+     "start_time": "2025-06-06T13:44:46.344151Z"
     }
    },
    "cell_type": "code",
@@ -128,13 +128,13 @@
    ],
    "id": "c8b5dc8358dd3bd2",
    "outputs": [],
-   "execution_count": 33
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-30T18:13:31.652335Z",
-     "start_time": "2025-05-30T18:13:31.649173Z"
+     "end_time": "2025-06-06T13:44:49.500131Z",
+     "start_time": "2025-06-06T13:44:49.497097Z"
     }
    },
    "cell_type": "code",
@@ -146,8 +146,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-30T17:58:58.313255Z",
-     "start_time": "2025-05-30T17:58:36.551742Z"
+     "end_time": "2025-06-06T13:45:16.063476Z",
+     "start_time": "2025-06-06T13:44:50.178873Z"
     }
    },
    "cell_type": "code",
@@ -440,7 +440,15 @@
      "output_type": "stream",
      "text": [
       "I:\\ETVOS\\2nd semester\\DS Lab 1\\DSLAB-Project\\venv1\\Lib\\site-packages\\sklearn\\utils\\deprecation.py:132: FutureWarning: 'force_all_finite' was renamed to 'ensure_all_finite' in 1.6 and will be removed in 1.8.\n",
-      "  warnings.warn(\n"
+      "  warnings.warn(\n",
+      "I:\\ETVOS\\2nd semester\\DS Lab 1\\DSLAB-Project\\venv1\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py:470: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. OF ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
      ]
     },
     {
@@ -470,17 +478,25 @@
      "output_type": "stream",
      "text": [
       "I:\\ETVOS\\2nd semester\\DS Lab 1\\DSLAB-Project\\venv1\\Lib\\site-packages\\sklearn\\utils\\deprecation.py:132: FutureWarning: 'force_all_finite' was renamed to 'ensure_all_finite' in 1.6 and will be removed in 1.8.\n",
-      "  warnings.warn(\n"
+      "  warnings.warn(\n",
+      "I:\\ETVOS\\2nd semester\\DS Lab 1\\DSLAB-Project\\venv1\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py:470: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. OF ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
      ]
     }
    ],
-   "execution_count": 23
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-30T17:58:58.331079Z",
-     "start_time": "2025-05-30T17:58:58.321265Z"
+     "end_time": "2025-06-06T13:45:16.087890Z",
+     "start_time": "2025-06-06T13:45:16.072485Z"
     }
    },
    "cell_type": "code",
@@ -493,21 +509,21 @@
     {
      "data": {
       "text/plain": [
-       "(8200, 6)"
+       "(8200, 8)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 24
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-30T17:58:58.423268Z",
-     "start_time": "2025-05-30T17:58:58.416267Z"
+     "end_time": "2025-06-06T13:45:16.129507Z",
+     "start_time": "2025-06-06T13:45:16.122869Z"
     }
    },
    "cell_type": "code",
@@ -517,34 +533,34 @@
     {
      "data": {
       "text/plain": [
-       "(8213, 6)"
+       "(8213, 8)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 25
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-30T17:58:58.628893Z",
-     "start_time": "2025-05-30T17:58:58.523377Z"
+     "end_time": "2025-06-06T13:45:16.253066Z",
+     "start_time": "2025-06-06T13:45:16.160436Z"
     }
    },
    "cell_type": "code",
    "source": "final.to_csv('../dataset/majority_informative.csv', index=False)",
    "id": "df4c92e12b159c69",
    "outputs": [],
-   "execution_count": 26
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-30T18:12:12.024534Z",
-     "start_time": "2025-05-30T18:12:11.924822Z"
+     "end_time": "2025-06-06T13:45:16.297593Z",
+     "start_time": "2025-06-06T13:45:16.281596Z"
     }
    },
    "cell_type": "code",
@@ -554,19 +570,19 @@
     {
      "data": {
       "text/plain": [
-       "         Unnamed: 0  type  oldbalanceOrg  newbalanceOrig  oldbalanceDest  \\\n",
-       "2438739     2441017     0       28488.83        35434.00          955.51   \n",
-       "2299733     2301877     0     5393405.29      5405360.93       280003.74   \n",
-       "4601619     4605340     0       10579.00        21995.77        20104.93   \n",
-       "2765162     2767579     0       39659.00        47338.39        54399.40   \n",
-       "1557452     1559211     0     4922014.34      4931816.15        41993.56   \n",
+       "         Unnamed: 0  type    amount  oldbalanceOrg  newbalanceOrig  \\\n",
+       "2431590     2433864     0   8311.80      871553.85       879865.65   \n",
+       "6062716     6068447     0  31931.85    10320041.27     10351973.12   \n",
+       "5987285     5992034     0  17255.72       10946.00        28201.72   \n",
+       "3579880     3582834     0  15558.61     3658693.32      3674251.93   \n",
+       "3636412     3639537     0   9442.86           0.00         9442.86   \n",
        "\n",
-       "         isFraud  \n",
-       "2438739        0  \n",
-       "2299733        0  \n",
-       "4601619        0  \n",
-       "2765162        0  \n",
-       "1557452        0  "
+       "         oldbalanceDest  newbalanceDest  isFraud  \n",
+       "2431590        14865.15         6553.34        0  \n",
+       "6062716        70876.85        38944.99        0  \n",
+       "5987285      3665216.93      3647961.21        0  \n",
+       "3579880       173519.39       157960.78        0  \n",
+       "3636412        89555.86        80113.01        0  "
       ],
       "text/html": [
        "<div>\n",
@@ -589,56 +605,68 @@
        "      <th></th>\n",
        "      <th>Unnamed: 0</th>\n",
        "      <th>type</th>\n",
+       "      <th>amount</th>\n",
        "      <th>oldbalanceOrg</th>\n",
        "      <th>newbalanceOrig</th>\n",
        "      <th>oldbalanceDest</th>\n",
+       "      <th>newbalanceDest</th>\n",
        "      <th>isFraud</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2438739</th>\n",
-       "      <td>2441017</td>\n",
+       "      <th>2431590</th>\n",
+       "      <td>2433864</td>\n",
        "      <td>0</td>\n",
-       "      <td>28488.83</td>\n",
-       "      <td>35434.00</td>\n",
-       "      <td>955.51</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2299733</th>\n",
-       "      <td>2301877</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5393405.29</td>\n",
-       "      <td>5405360.93</td>\n",
-       "      <td>280003.74</td>\n",
+       "      <td>8311.80</td>\n",
+       "      <td>871553.85</td>\n",
+       "      <td>879865.65</td>\n",
+       "      <td>14865.15</td>\n",
+       "      <td>6553.34</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4601619</th>\n",
-       "      <td>4605340</td>\n",
+       "      <th>6062716</th>\n",
+       "      <td>6068447</td>\n",
        "      <td>0</td>\n",
-       "      <td>10579.00</td>\n",
-       "      <td>21995.77</td>\n",
-       "      <td>20104.93</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2765162</th>\n",
-       "      <td>2767579</td>\n",
-       "      <td>0</td>\n",
-       "      <td>39659.00</td>\n",
-       "      <td>47338.39</td>\n",
-       "      <td>54399.40</td>\n",
+       "      <td>31931.85</td>\n",
+       "      <td>10320041.27</td>\n",
+       "      <td>10351973.12</td>\n",
+       "      <td>70876.85</td>\n",
+       "      <td>38944.99</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1557452</th>\n",
-       "      <td>1559211</td>\n",
+       "      <th>5987285</th>\n",
+       "      <td>5992034</td>\n",
        "      <td>0</td>\n",
-       "      <td>4922014.34</td>\n",
-       "      <td>4931816.15</td>\n",
-       "      <td>41993.56</td>\n",
+       "      <td>17255.72</td>\n",
+       "      <td>10946.00</td>\n",
+       "      <td>28201.72</td>\n",
+       "      <td>3665216.93</td>\n",
+       "      <td>3647961.21</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3579880</th>\n",
+       "      <td>3582834</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15558.61</td>\n",
+       "      <td>3658693.32</td>\n",
+       "      <td>3674251.93</td>\n",
+       "      <td>173519.39</td>\n",
+       "      <td>157960.78</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3636412</th>\n",
+       "      <td>3639537</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9442.86</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>9442.86</td>\n",
+       "      <td>89555.86</td>\n",
+       "      <td>80113.01</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -646,12 +674,12 @@
        "</div>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 27
+   "execution_count": 13
   },
   {
    "metadata": {},
