--- a/data/pre_processing.ipynb
+++ b/data/pre_processing.ipynb
@@ -16,8 +16,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-30T18:16:58.558418Z",
-     "start_time": "2025-05-30T18:16:58.551421Z"
+     "end_time": "2025-06-06T13:42:43.518627Z",
+     "start_time": "2025-06-06T13:42:40.259988Z"
     }
    },
    "cell_type": "code",
@@ -40,14 +40,23 @@
     "from sklearn.manifold import TSNE\n"
    ],
    "id": "c93333fb48f47465",
-   "outputs": [],
-   "execution_count": 29
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "I:\\ETVOS\\2nd semester\\DS Lab 1\\DSLAB-Project\\venv1\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-30T18:17:03.841645Z",
-     "start_time": "2025-05-30T18:16:58.710559Z"
+     "end_time": "2025-06-06T13:42:47.186094Z",
+     "start_time": "2025-06-06T13:42:43.524137Z"
     }
    },
    "cell_type": "code",
@@ -57,13 +66,13 @@
    ],
    "id": "b17a258ed4236501",
    "outputs": [],
-   "execution_count": 30
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-30T18:17:03.883188Z",
-     "start_time": "2025-05-30T18:17:03.856664Z"
+     "end_time": "2025-06-06T13:42:47.513754Z",
+     "start_time": "2025-06-06T13:42:47.488754Z"
     }
    },
    "cell_type": "code",
@@ -211,44 +220,44 @@
        "</div>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 31
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-30T18:17:03.985162Z",
-     "start_time": "2025-05-30T18:17:03.977886Z"
+     "end_time": "2025-06-06T13:42:47.566667Z",
+     "start_time": "2025-06-06T13:42:47.562789Z"
     }
    },
    "cell_type": "code",
    "source": "df_temp = df",
    "id": "97831b721be2637e",
    "outputs": [],
-   "execution_count": 32
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-30T18:17:04.062030Z",
-     "start_time": "2025-05-30T18:17:04.056705Z"
+     "end_time": "2025-06-06T13:42:47.628503Z",
+     "start_time": "2025-06-06T13:42:47.623190Z"
     }
    },
    "cell_type": "code",
    "source": "df = df_temp",
    "id": "eb69233a5c801c9a",
    "outputs": [],
-   "execution_count": 33
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-30T18:17:04.336805Z",
-     "start_time": "2025-05-30T18:17:04.270807Z"
+     "end_time": "2025-06-06T13:42:47.740611Z",
+     "start_time": "2025-06-06T13:42:47.693089Z"
     }
    },
    "cell_type": "code",
@@ -268,18 +277,18 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 34
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-30T18:17:05.439885Z",
-     "start_time": "2025-05-30T18:17:04.428157Z"
+     "end_time": "2025-06-06T13:42:48.580890Z",
+     "start_time": "2025-06-06T13:42:47.785812Z"
     }
    },
    "cell_type": "code",
@@ -288,20 +297,20 @@
     "df['type'] = LabelEncoder().fit_transform(df['type'])\n",
     "\n",
     "# Drop non-numeric ID columns\n",
-    "df = df.drop(['isFlaggedFraud','Unnamed: 0','newbalanceDest','amount'], axis=1)\n",
+    "df = df.drop(['isFlaggedFraud','Unnamed: 0'], axis=1)\n",
     "\n",
     "df_f = df[df['isFraud'] == 1]  # All rows where target == 1\n",
     "df_nf = df[df['isFraud'] == 0]  # All rows where target == 0\n"
    ],
    "id": "ace22f47fe915902",
    "outputs": [],
-   "execution_count": 35
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-30T18:17:05.511417Z",
-     "start_time": "2025-05-30T18:17:05.496949Z"
+     "end_time": "2025-06-06T13:42:48.627826Z",
+     "start_time": "2025-06-06T13:42:48.616638Z"
     }
    },
    "cell_type": "code",
@@ -311,12 +320,19 @@
     {
      "data": {
       "text/plain": [
-       "     type  oldbalanceOrg  newbalanceOrig  oldbalanceDest  isFraud\n",
-       "2       4          181.0             0.0             0.0        1\n",
-       "3       1          181.0             0.0         21182.0        1\n",
-       "251     4         2806.0             0.0             0.0        1\n",
-       "252     1         2806.0             0.0         26202.0        1\n",
-       "680     4        20128.0             0.0             0.0        1"
+       "     type   amount  oldbalanceOrg  newbalanceOrig  oldbalanceDest  \\\n",
+       "2       4    181.0          181.0             0.0             0.0   \n",
+       "3       1    181.0          181.0             0.0         21182.0   \n",
+       "251     4   2806.0         2806.0             0.0             0.0   \n",
+       "252     1   2806.0         2806.0             0.0         26202.0   \n",
+       "680     4  20128.0        20128.0             0.0             0.0   \n",
+       "\n",
+       "     newbalanceDest  isFraud  \n",
+       "2               0.0        1  \n",
+       "3               0.0        1  \n",
+       "251             0.0        1  \n",
+       "252             0.0        1  \n",
+       "680             0.0        1  "
       ],
       "text/html": [
        "<div>\n",
@@ -338,9 +354,11 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>type</th>\n",
+       "      <th>amount</th>\n",
        "      <th>oldbalanceOrg</th>\n",
        "      <th>newbalanceOrig</th>\n",
        "      <th>oldbalanceDest</th>\n",
+       "      <th>newbalanceDest</th>\n",
        "      <th>isFraud</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -349,6 +367,8 @@
        "      <th>2</th>\n",
        "      <td>4</td>\n",
        "      <td>181.0</td>\n",
+       "      <td>181.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1</td>\n",
@@ -357,14 +377,18 @@
        "      <th>3</th>\n",
        "      <td>1</td>\n",
        "      <td>181.0</td>\n",
+       "      <td>181.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>21182.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>251</th>\n",
        "      <td>4</td>\n",
        "      <td>2806.0</td>\n",
+       "      <td>2806.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1</td>\n",
@@ -373,14 +397,18 @@
        "      <th>252</th>\n",
        "      <td>1</td>\n",
        "      <td>2806.0</td>\n",
+       "      <td>2806.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>26202.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>680</th>\n",
        "      <td>4</td>\n",
        "      <td>20128.0</td>\n",
+       "      <td>20128.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1</td>\n",
@@ -390,18 +418,18 @@
        "</div>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 36
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-30T18:17:05.638892Z",
-     "start_time": "2025-05-30T18:17:05.582474Z"
+     "end_time": "2025-06-06T13:42:48.727643Z",
+     "start_time": "2025-06-06T13:42:48.680439Z"
     }
    },
    "cell_type": "code",
@@ -420,44 +448,44 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 37
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-30T18:17:29.588218Z",
-     "start_time": "2025-05-30T18:17:05.734255Z"
+     "end_time": "2025-06-06T13:43:33.084713Z",
+     "start_time": "2025-06-06T13:43:07.034512Z"
     }
    },
    "cell_type": "code",
    "source": "df_nf.to_csv(\"../dataset/majority.csv\")",
    "id": "19b5fc56713bbd36",
    "outputs": [],
-   "execution_count": 38
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-30T18:17:29.687668Z",
-     "start_time": "2025-05-30T18:17:29.642154Z"
+     "end_time": "2025-06-06T13:43:33.139879Z",
+     "start_time": "2025-06-06T13:43:33.090880Z"
     }
    },
    "cell_type": "code",
    "source": "df_f.to_csv(\"../dataset/minority.csv\")",
    "id": "a96d24ee9c08f18f",
    "outputs": [],
-   "execution_count": 39
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-30T18:17:29.714679Z",
-     "start_time": "2025-05-30T18:17:29.699680Z"
+     "end_time": "2025-06-06T13:43:33.172818Z",
+     "start_time": "2025-06-06T13:43:33.160851Z"
     }
    },
    "cell_type": "code",
@@ -467,12 +495,19 @@
     {
      "data": {
       "text/plain": [
-       "     type  oldbalanceOrg  newbalanceOrig  oldbalanceDest  isFraud\n",
-       "2       4          181.0             0.0             0.0        1\n",
-       "3       1          181.0             0.0         21182.0        1\n",
-       "251     4         2806.0             0.0             0.0        1\n",
-       "252     1         2806.0             0.0         26202.0        1\n",
-       "680     4        20128.0             0.0             0.0        1"
+       "     type   amount  oldbalanceOrg  newbalanceOrig  oldbalanceDest  \\\n",
+       "2       4    181.0          181.0             0.0             0.0   \n",
+       "3       1    181.0          181.0             0.0         21182.0   \n",
+       "251     4   2806.0         2806.0             0.0             0.0   \n",
+       "252     1   2806.0         2806.0             0.0         26202.0   \n",
+       "680     4  20128.0        20128.0             0.0             0.0   \n",
+       "\n",
+       "     newbalanceDest  isFraud  \n",
+       "2               0.0        1  \n",
+       "3               0.0        1  \n",
+       "251             0.0        1  \n",
+       "252             0.0        1  \n",
+       "680             0.0        1  "
       ],
       "text/html": [
        "<div>\n",
@@ -494,9 +529,11 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>type</th>\n",
+       "      <th>amount</th>\n",
        "      <th>oldbalanceOrg</th>\n",
        "      <th>newbalanceOrig</th>\n",
        "      <th>oldbalanceDest</th>\n",
+       "      <th>newbalanceDest</th>\n",
        "      <th>isFraud</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -505,6 +542,8 @@
        "      <th>2</th>\n",
        "      <td>4</td>\n",
        "      <td>181.0</td>\n",
+       "      <td>181.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1</td>\n",
@@ -513,14 +552,18 @@
        "      <th>3</th>\n",
        "      <td>1</td>\n",
        "      <td>181.0</td>\n",
+       "      <td>181.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>21182.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>251</th>\n",
        "      <td>4</td>\n",
        "      <td>2806.0</td>\n",
+       "      <td>2806.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1</td>\n",
@@ -529,14 +572,18 @@
        "      <th>252</th>\n",
        "      <td>1</td>\n",
        "      <td>2806.0</td>\n",
+       "      <td>2806.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>26202.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>680</th>\n",
        "      <td>4</td>\n",
        "      <td>20128.0</td>\n",
+       "      <td>20128.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1</td>\n",
@@ -546,12 +593,12 @@
        "</div>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 40
+   "execution_count": 12
   },
   {
    "metadata": {},
