--- a/ctgan/data_generator_training.ipynb
+++ b/ctgan/data_generator_training.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-06-05T22:04:26.009850Z",
-     "start_time": "2025-06-05T22:04:26.005443Z"
+     "end_time": "2025-06-06T07:24:57.164450Z",
+     "start_time": "2025-06-06T07:24:57.141Z"
     }
    },
    "source": [
@@ -18,38 +18,40 @@
     "from sklearn.preprocessing import StandardScaler\n"
    ],
    "outputs": [],
-   "execution_count": 22
+   "execution_count": 30
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-05T22:04:26.184190Z",
-     "start_time": "2025-06-05T22:04:26.161679Z"
+     "end_time": "2025-06-06T14:07:26.906320Z",
+     "start_time": "2025-06-06T14:07:26.894284Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "df_m_0 = pd.read_csv('../dataset/min_0.csv')\n",
-    "df_m_1 = pd.read_csv('../dataset/min_1.csv')\n",
-    "df_m_2 = pd.read_csv('../dataset/min_2.csv')\n",
-    "df_m_3 = pd.read_csv('../dataset/min_3.csv')\n",
-    "df_0 = pd.read_csv('../dataset/informative_cluster_0.csv')\n",
-    "df_1 = pd.read_csv('../dataset/informative_cluster_1.csv')\n",
-    "df_2 = pd.read_csv('../dataset/informative_cluster_2.csv')"
+    "df_m_0 = \"min_0\"\n",
+    "df_m_1 = \"min_1\"\n",
+    "df_m_2 = 'min_2'\n",
+    "# df_m_3 = pd.read_csv('../dataset/min_3.csv')\n",
+    "df_0 = 'informative_cluster_0'\n",
+    "df_1 = 'informative_cluster_1'\n",
+    "# df_2 = pd.read_csv('../dataset/informative_cluster_2.csv')\n",
+    "selected_file = df_1\n",
+    "df= pd.read_csv(\"../dataset/\" + selected_file + \".csv\")"
    ],
    "id": "ca79e16006e5829e",
    "outputs": [],
-   "execution_count": 23
+   "execution_count": 127
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-05T22:04:26.627135Z",
-     "start_time": "2025-06-05T22:04:26.619114Z"
+     "end_time": "2025-06-06T14:07:26.934682Z",
+     "start_time": "2025-06-06T14:07:26.926176Z"
     }
    },
    "cell_type": "code",
-   "source": "df_m_0.info()",
+   "source": "df.info()",
    "id": "2b7aaf9546284aec",
    "outputs": [
     {
@@ -57,40 +59,42 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 4115 entries, 0 to 4114\n",
-      "Data columns (total 5 columns):\n",
+      "RangeIndex: 6509 entries, 0 to 6508\n",
+      "Data columns (total 7 columns):\n",
       " #   Column          Non-Null Count  Dtype  \n",
       "---  ------          --------------  -----  \n",
-      " 0   Unnamed: 0      4115 non-null   int64  \n",
-      " 1   type            4115 non-null   int64  \n",
-      " 2   oldbalanceOrg   4115 non-null   float64\n",
-      " 3   newbalanceOrig  4115 non-null   float64\n",
-      " 4   oldbalanceDest  4115 non-null   float64\n",
-      "dtypes: float64(3), int64(2)\n",
-      "memory usage: 160.9 KB\n"
+      " 0   Unnamed: 0      6509 non-null   int64  \n",
+      " 1   type            6509 non-null   int64  \n",
+      " 2   amount          6509 non-null   float64\n",
+      " 3   oldbalanceOrg   6509 non-null   float64\n",
+      " 4   newbalanceOrig  6509 non-null   float64\n",
+      " 5   oldbalanceDest  6509 non-null   float64\n",
+      " 6   newbalanceDest  6509 non-null   float64\n",
+      "dtypes: float64(5), int64(2)\n",
+      "memory usage: 356.1 KB\n"
      ]
     }
    ],
-   "execution_count": 24
+   "execution_count": 128
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-05T22:04:27.092963Z",
-     "start_time": "2025-06-05T22:04:27.089035Z"
+     "end_time": "2025-06-06T14:07:27.027306Z",
+     "start_time": "2025-06-06T14:07:27.023336Z"
     }
    },
    "cell_type": "code",
-   "source": "df = df_m_0",
+   "source": "",
    "id": "472de5557045710a",
    "outputs": [],
-   "execution_count": 25
+   "execution_count": null
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-05T22:04:27.834995Z",
-     "start_time": "2025-06-05T22:04:27.824993Z"
+     "end_time": "2025-06-06T14:07:27.073330Z",
+     "start_time": "2025-06-06T14:07:27.062191Z"
     }
    },
    "cell_type": "code",
@@ -103,12 +107,19 @@
     {
      "data": {
       "text/plain": [
-       "   type  oldbalanceOrg  newbalanceOrig  oldbalanceDest\n",
-       "0     1         181.00             0.0         21182.0\n",
-       "1     1        2806.00             0.0         26202.0\n",
-       "2     1       20128.00             0.0          6268.0\n",
-       "3     1           0.00             0.0           102.0\n",
-       "4     1     1277212.77             0.0             0.0"
+       "   type    amount  oldbalanceOrg  newbalanceOrig  oldbalanceDest  \\\n",
+       "0     0   9442.86           0.00         9442.86        89555.86   \n",
+       "1     0  10485.04       10411.00        20896.04       119631.29   \n",
+       "2     0   7116.65      228235.00       235351.65       122203.77   \n",
+       "3     0   6200.80      126034.58       132235.38       611206.60   \n",
+       "4     0  14965.91       18467.00        33432.91       316691.28   \n",
+       "\n",
+       "   newbalanceDest  \n",
+       "0        80113.01  \n",
+       "1       109146.25  \n",
+       "2       115087.12  \n",
+       "3       605005.80  \n",
+       "4       301725.37  "
       ],
       "text/html": [
        "<div>\n",
@@ -130,271 +141,207 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>type</th>\n",
+       "      <th>amount</th>\n",
        "      <th>oldbalanceOrg</th>\n",
        "      <th>newbalanceOrig</th>\n",
        "      <th>oldbalanceDest</th>\n",
+       "      <th>newbalanceDest</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>181.00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>21182.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2806.00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>26202.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>20128.00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>6268.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9442.86</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>102.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1277212.77</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 26
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-06-05T22:04:29.050809Z",
-     "start_time": "2025-06-05T22:04:29.046809Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "",
-   "id": "26287f3c0f2b81f2",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-06-05T22:04:38.384066Z",
-     "start_time": "2025-06-05T22:04:29.935387Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "# Names of the columns that are discrete\n",
-    "discrete_columns = [\n",
-    "    'type'\n",
-    "]\n",
-    "\n",
-    "ctgan = CTGAN(epochs=10)\n",
-    "ctgan.fit(df, discrete_columns)\n",
-    "\n",
-    "# Create synthetic data\n"
-   ],
-   "id": "997948b5746c0eaa",
-   "outputs": [],
-   "execution_count": 27
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-06-05T22:04:38.420363Z",
-     "start_time": "2025-06-05T22:04:38.389433Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "synthetic_data = ctgan.sample(1000)",
-   "id": "9e2e5b403e34a08f",
-   "outputs": [],
-   "execution_count": 28
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-06-05T22:04:38.452369Z",
-     "start_time": "2025-06-05T22:04:38.443365Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "synthetic_data.head()",
-   "id": "24ff5c3da44095f3",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "   type  oldbalanceOrg  newbalanceOrig  oldbalanceDest\n",
-       "0     1 -173522.783467      100.079221  -125908.788228\n",
-       "1     1   46875.634383       60.363389   976435.709896\n",
-       "2     1  190903.993423      159.793368  -214486.182078\n",
-       "3     1 -184829.164561      196.914430   -91139.431833\n",
-       "4     1 -177424.831260     -123.455997  -495523.518584"
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>type</th>\n",
-       "      <th>oldbalanceOrg</th>\n",
-       "      <th>newbalanceOrig</th>\n",
-       "      <th>oldbalanceDest</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>-173522.783467</td>\n",
-       "      <td>100.079221</td>\n",
-       "      <td>-125908.788228</td>\n",
+       "      <td>9442.86</td>\n",
+       "      <td>89555.86</td>\n",
+       "      <td>80113.01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>46875.634383</td>\n",
-       "      <td>60.363389</td>\n",
-       "      <td>976435.709896</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10485.04</td>\n",
+       "      <td>10411.00</td>\n",
+       "      <td>20896.04</td>\n",
+       "      <td>119631.29</td>\n",
+       "      <td>109146.25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>190903.993423</td>\n",
-       "      <td>159.793368</td>\n",
-       "      <td>-214486.182078</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7116.65</td>\n",
+       "      <td>228235.00</td>\n",
+       "      <td>235351.65</td>\n",
+       "      <td>122203.77</td>\n",
+       "      <td>115087.12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>-184829.164561</td>\n",
-       "      <td>196.914430</td>\n",
-       "      <td>-91139.431833</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6200.80</td>\n",
+       "      <td>126034.58</td>\n",
+       "      <td>132235.38</td>\n",
+       "      <td>611206.60</td>\n",
+       "      <td>605005.80</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>-177424.831260</td>\n",
-       "      <td>-123.455997</td>\n",
-       "      <td>-495523.518584</td>\n",
+       "      <td>0</td>\n",
+       "      <td>14965.91</td>\n",
+       "      <td>18467.00</td>\n",
+       "      <td>33432.91</td>\n",
+       "      <td>316691.28</td>\n",
+       "      <td>301725.37</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 29
+   "execution_count": 129
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-05T22:03:03.240307Z",
-     "start_time": "2025-06-05T22:03:03.237308Z"
+     "end_time": "2025-06-06T14:07:27.143933Z",
+     "start_time": "2025-06-06T14:07:27.137475Z"
     }
    },
    "cell_type": "code",
-   "source": "",
-   "id": "91413ea283dd8123",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
-    "from sdv.cag import CustomConstraint\n",
     "from sdv.cag import SingleTableProgrammableConstraint\n",
     "\n",
-    "class TransactionBalanceLogic(CustomConstraint):\n",
+    "class TransactionBalanceLogic(SingleTableProgrammableConstraint):\n",
     "    def is_valid(self, row):\n",
-    "        t = row['type']\n",
-    "        obo = row['oldBalanceOrig']\n",
-    "        nbo = row['newBalanceOrig']\n",
-    "        obd = row['oldBalanceDest']\n",
+    "        print(row)\n",
+    "        amount = row['amount']\n",
+    "        obo = row['oldbalanceOrg']\n",
+    "        nbo = row['newbalanceOrig']\n",
+    "        obd = row['oldbalanceDest']\n",
+    "        nbd = row['oldbalanceDest']\n",
     "\n",
-    "        if any(v is None for v in [t, obo, nbo, obd]):\n",
-    "            return True  # skip NaNs\n",
-    "\n",
-    "        # Calculate transaction amount\n",
-    "        amount = obo - nbo\n",
-    "\n",
-    "        if t == 'TRANSFER':\n",
-    "            return amount > 0 and obd + amount >= 0\n",
-    "        elif t == 'CASH_OUT':\n",
-    "            return amount > 0\n",
-    "        elif t == 'PAYMENT':\n",
-    "            return amount > 0\n",
-    "        elif t == 'DEBIT':\n",
-    "            return amount > 0 and obd + amount >= 0\n",
-    "        elif t == 'CASH_IN':\n",
-    "            return amount == 0 and obd > 0\n",
-    "        else:\n",
-    "            return True  # for unknown or test types\n",
+    "        # if any(v is None for v in [t, obo, nbo, obd]):\n",
+    "        #     return True  # skip NaNs\n",
+    "        return (obd >= 0) & (obo >= 0) & (nbo >= 0) & (amount>0) & (nbd >= 0)\n",
     "\n",
     "    def transform(self, table_data):\n",
     "        return table_data  # no transformation needed\n",
     "\n",
+    "    def get_updated_metadata(self, metadata):\n",
+    "        new_metadata = metadata.copy()\n",
+    "        return new_metadata\n",
+    "\n",
     "    def reverse_transform(self, table_data):\n",
     "        return table_data\n"
    ],
-   "id": "54cb02def7a162be"
+   "id": "54cb02def7a162be",
+   "outputs": [],
+   "execution_count": 130
+  },
+  {
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    },
+    "ExecuteTime": {
+     "start_time": "2025-06-06T14:07:36.159968Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from sdv.single_table import CTGANSynthesizer\n",
+    "from sdv.metadata import Metadata\n",
+    "metadata = Metadata.detect_from_dataframe(df)\n",
+    "synthesizer = CTGANSynthesizer(metadata)\n",
+    "synthesizer.add_constraints([TransactionBalanceLogic()])\n",
+    "synthesizer.fit(df)"
+   ],
+   "id": "4c458d8cf0dfc36e",
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "I:\\ETVOS\\2nd semester\\DS Lab 1\\DSLAB-Project\\venv1\\Lib\\site-packages\\sdv\\single_table\\base.py:128: UserWarning: We strongly recommend saving the metadata using 'save_to_json' for replicability in future SDV versions.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "execution_count": null
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-06T14:07:26.875755Z",
+     "start_time": "2025-06-06T14:07:26.782178Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "data = synthesizer.sample(df.shape[0],output_file_path=\"../dataset/fake_\" + selected_file + \".csv\")",
+   "id": "84529d343652a2e7",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      type      amount  oldbalanceOrg  newbalanceOrig  oldbalanceDest  \\\n",
+      "0        0        6.65      168541.69        52401.99          841.08   \n",
+      "1        0   169276.94      370331.43            0.00      2101506.82   \n",
+      "2        1   101568.81      683239.02        52032.21            0.00   \n",
+      "3        0        6.65      164727.05       219857.77      3690770.85   \n",
+      "4        1    29037.78     5082225.19            0.00       440333.53   \n",
+      "...    ...         ...            ...             ...             ...   \n",
+      "1686     1  1874442.92     1702539.21        76340.70            0.00   \n",
+      "1687     1        6.65     3659516.94         3008.09       403146.51   \n",
+      "1688     0     6419.40    11745746.47            0.00       623893.96   \n",
+      "1689     1        6.65     2264952.96       111106.71      6031368.71   \n",
+      "1690     1   153119.76       64859.46        14331.98      1540325.06   \n",
+      "\n",
+      "      newbalanceDest  \n",
+      "0           42701.71  \n",
+      "1               0.00  \n",
+      "2         2222367.18  \n",
+      "3               0.00  \n",
+      "4          470889.52  \n",
+      "...              ...  \n",
+      "1686      2517717.31  \n",
+      "1687            0.00  \n",
+      "1688     10426671.16  \n",
+      "1689      5961742.52  \n",
+      "1690      2361115.29  \n",
+      "\n",
+      "[1691 rows x 6 columns]\n"
+     ]
+    }
+   ],
+   "execution_count": 126
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-06T14:03:25.507688Z",
+     "start_time": "2025-06-06T14:03:25.504691Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "id": "bfe8f1ac4d8dc183",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": [
-    "from sdv.single_table import CTGANSynthesizer\n",
-    "\n",
-    "synthesizer = CTGANSynthesizer(metadata)\n",
-    "synthesizer.add_constraints([TransactionBalanceLogic()])\n",
-    "synthesizer.fit(real_data)"
-   ],
-   "id": "4c458d8cf0dfc36e"
+   "source": "",
+   "id": "f992631f27e06388"
   }
  ],
  "metadata": {
