--- a/ctgan/data_generator_training.ipynb
+++ b/ctgan/data_generator_training.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-06-06T07:24:57.164450Z",
-     "start_time": "2025-06-06T07:24:57.141Z"
+     "end_time": "2025-06-09T12:28:45.098631Z",
+     "start_time": "2025-06-09T12:28:39.062551Z"
     }
    },
    "source": [
@@ -18,13 +18,13 @@
     "from sklearn.preprocessing import StandardScaler\n"
    ],
    "outputs": [],
-   "execution_count": 30
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-06T14:07:26.906320Z",
-     "start_time": "2025-06-06T14:07:26.894284Z"
+     "end_time": "2025-06-09T12:28:45.126989Z",
+     "start_time": "2025-06-09T12:28:45.105596Z"
     }
    },
    "cell_type": "code",
@@ -35,19 +35,20 @@
     "# df_m_3 = pd.read_csv('../dataset/min_3.csv')\n",
     "df_0 = 'informative_cluster_0'\n",
     "df_1 = 'informative_cluster_1'\n",
+    "df_merged = 'merged_shuffled'\n",
     "# df_2 = pd.read_csv('../dataset/informative_cluster_2.csv')\n",
-    "selected_file = df_1\n",
+    "selected_file = df_merged\n",
     "df= pd.read_csv(\"../dataset/\" + selected_file + \".csv\")"
    ],
    "id": "ca79e16006e5829e",
    "outputs": [],
-   "execution_count": 127
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-06T14:07:26.934682Z",
-     "start_time": "2025-06-06T14:07:26.926176Z"
+     "end_time": "2025-06-09T12:28:45.486651Z",
+     "start_time": "2025-06-09T12:28:45.468585Z"
     }
    },
    "cell_type": "code",
@@ -59,29 +60,28 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 6509 entries, 0 to 6508\n",
-      "Data columns (total 7 columns):\n",
+      "RangeIndex: 16413 entries, 0 to 16412\n",
+      "Data columns (total 6 columns):\n",
       " #   Column          Non-Null Count  Dtype  \n",
       "---  ------          --------------  -----  \n",
-      " 0   Unnamed: 0      6509 non-null   int64  \n",
-      " 1   type            6509 non-null   int64  \n",
-      " 2   amount          6509 non-null   float64\n",
-      " 3   oldbalanceOrg   6509 non-null   float64\n",
-      " 4   newbalanceOrig  6509 non-null   float64\n",
-      " 5   oldbalanceDest  6509 non-null   float64\n",
-      " 6   newbalanceDest  6509 non-null   float64\n",
-      "dtypes: float64(5), int64(2)\n",
-      "memory usage: 356.1 KB\n"
+      " 0   type            16413 non-null  int64  \n",
+      " 1   amount          16413 non-null  float64\n",
+      " 2   oldbalanceOrg   16413 non-null  float64\n",
+      " 3   newbalanceOrig  16413 non-null  float64\n",
+      " 4   oldbalanceDest  16413 non-null  float64\n",
+      " 5   newbalanceDest  16413 non-null  float64\n",
+      "dtypes: float64(5), int64(1)\n",
+      "memory usage: 769.5 KB\n"
      ]
     }
    ],
-   "execution_count": 128
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-06T14:07:27.027306Z",
-     "start_time": "2025-06-06T14:07:27.023336Z"
+     "end_time": "2025-06-09T12:28:49.298515Z",
+     "start_time": "2025-06-09T12:28:49.295537Z"
     }
    },
    "cell_type": "code",
@@ -93,13 +93,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-06T14:07:27.073330Z",
-     "start_time": "2025-06-06T14:07:27.062191Z"
+     "end_time": "2025-06-09T12:29:26.704797Z",
+     "start_time": "2025-06-09T12:29:26.684253Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "df = df.drop(columns=['Unnamed: 0'])\n",
+    "if 'Unnamed: 0' in df.columns:\n",
+    "    df = df.drop(columns=['Unnamed: 0'])\n",
     "df.head()"
    ],
    "id": "62c9dfbfa6b1db40",
@@ -107,19 +108,19 @@
     {
      "data": {
       "text/plain": [
-       "   type    amount  oldbalanceOrg  newbalanceOrig  oldbalanceDest  \\\n",
-       "0     0   9442.86           0.00         9442.86        89555.86   \n",
-       "1     0  10485.04       10411.00        20896.04       119631.29   \n",
-       "2     0   7116.65      228235.00       235351.65       122203.77   \n",
-       "3     0   6200.80      126034.58       132235.38       611206.60   \n",
-       "4     0  14965.91       18467.00        33432.91       316691.28   \n",
+       "   type      amount  oldbalanceOrg  newbalanceOrig  oldbalanceDest  \\\n",
+       "0     1   205480.23        5949.01             0.0      1235745.12   \n",
+       "1     1   167806.93      167806.93             0.0            0.00   \n",
+       "2     1   181330.91       37778.00             0.0        36793.35   \n",
+       "3     4   167907.12      167907.12             0.0            0.00   \n",
+       "4     4  1434440.31     1434440.31             0.0            0.00   \n",
        "\n",
        "   newbalanceDest  \n",
-       "0        80113.01  \n",
-       "1       109146.25  \n",
-       "2       115087.12  \n",
-       "3       605005.80  \n",
-       "4       301725.37  "
+       "0      1441225.36  \n",
+       "1       167806.93  \n",
+       "2       218124.26  \n",
+       "3            0.00  \n",
+       "4            0.00  "
       ],
       "text/html": [
        "<div>\n",
@@ -151,66 +152,66 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>9442.86</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>9442.86</td>\n",
-       "      <td>89555.86</td>\n",
-       "      <td>80113.01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>205480.23</td>\n",
+       "      <td>5949.01</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1235745.12</td>\n",
+       "      <td>1441225.36</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>10485.04</td>\n",
-       "      <td>10411.00</td>\n",
-       "      <td>20896.04</td>\n",
-       "      <td>119631.29</td>\n",
-       "      <td>109146.25</td>\n",
+       "      <td>1</td>\n",
+       "      <td>167806.93</td>\n",
+       "      <td>167806.93</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>167806.93</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>7116.65</td>\n",
-       "      <td>228235.00</td>\n",
-       "      <td>235351.65</td>\n",
-       "      <td>122203.77</td>\n",
-       "      <td>115087.12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>181330.91</td>\n",
+       "      <td>37778.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>36793.35</td>\n",
+       "      <td>218124.26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>6200.80</td>\n",
-       "      <td>126034.58</td>\n",
-       "      <td>132235.38</td>\n",
-       "      <td>611206.60</td>\n",
-       "      <td>605005.80</td>\n",
+       "      <td>4</td>\n",
+       "      <td>167907.12</td>\n",
+       "      <td>167907.12</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>14965.91</td>\n",
-       "      <td>18467.00</td>\n",
-       "      <td>33432.91</td>\n",
-       "      <td>316691.28</td>\n",
-       "      <td>301725.37</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1434440.31</td>\n",
+       "      <td>1434440.31</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 129
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-06T14:07:27.143933Z",
-     "start_time": "2025-06-06T14:07:27.137475Z"
+     "end_time": "2025-06-09T12:29:34.512680Z",
+     "start_time": "2025-06-09T12:29:31.933284Z"
     }
    },
    "cell_type": "code",
@@ -242,13 +243,13 @@
    ],
    "id": "54cb02def7a162be",
    "outputs": [],
-   "execution_count": 130
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-06T14:10:33.500931Z",
-     "start_time": "2025-06-06T14:07:36.159968Z"
+     "end_time": "2025-06-09T12:36:42.343211Z",
+     "start_time": "2025-06-09T12:29:35.219317Z"
     }
    },
    "cell_type": "code",
@@ -271,13 +272,13 @@
      ]
     }
    ],
-   "execution_count": 131
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-06T14:10:33.743853Z",
-     "start_time": "2025-06-06T14:10:33.540201Z"
+     "end_time": "2025-06-09T12:36:43.223419Z",
+     "start_time": "2025-06-09T12:36:42.414482Z"
     }
    },
    "cell_type": "code",
@@ -288,37 +289,87 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      type     amount  oldbalanceOrg  newbalanceOrig  oldbalanceDest  \\\n",
-      "0        0   16318.37        2782.07          543.40          900.86   \n",
-      "1        1    8673.88       20475.46        12087.16        17774.73   \n",
-      "2        3   14742.25       41266.93       180973.42         4759.28   \n",
-      "3        1  458282.69       27077.05         3053.57       186138.65   \n",
-      "4        3    1732.84      128967.95       436517.62         6278.58   \n",
-      "...    ...        ...            ...             ...             ...   \n",
-      "6504     1    9954.42       63658.35       311671.37         3042.07   \n",
-      "6505     1  147607.18       14341.25        11747.69       136534.54   \n",
-      "6506     3    6134.67        9612.99            0.00            0.00   \n",
-      "6507     0   20686.07      170538.13       202648.34          963.04   \n",
-      "6508     3   10554.80       63238.38       245705.57         2237.95   \n",
+      "       type     amount  oldbalanceOrg  newbalanceOrig  oldbalanceDest  \\\n",
+      "0         1  249120.14     2377531.77          814.36        27632.75   \n",
+      "1         1   14785.81       42063.94            0.00       176827.96   \n",
+      "2         1       0.00           0.00         5009.06       331470.73   \n",
+      "3         3    2086.72       59208.48         3865.90         2404.70   \n",
+      "4         1       0.00      120641.34         9425.39      3402203.24   \n",
+      "...     ...        ...            ...             ...             ...   \n",
+      "16408     4   82951.18     1059501.43            0.00        20274.96   \n",
+      "16409     4  492669.66      252210.51        13056.84        38779.47   \n",
+      "16410     1  248086.73      222164.17          266.39       205416.25   \n",
+      "16411     3       0.00           0.00        11757.52            0.00   \n",
+      "16412     1  820169.91     1455161.11          717.63        24859.38   \n",
+      "\n",
+      "       newbalanceDest  \n",
+      "0          4406226.70  \n",
+      "1          1122000.98  \n",
+      "2           352109.69  \n",
+      "3            30228.16  \n",
+      "4          1025391.42  \n",
+      "...               ...  \n",
+      "16408            0.00  \n",
+      "16409       736266.53  \n",
+      "16410       142606.20  \n",
+      "16411            0.00  \n",
+      "16412       218623.58  \n",
+      "\n",
+      "[16413 rows x 6 columns]\n",
+      "      type      amount  oldbalanceOrg  newbalanceOrig  oldbalanceDest  \\\n",
+      "0        1   250329.60       82244.70         1372.39       654263.84   \n",
+      "1        3    37256.61       23691.61         7481.04            0.00   \n",
+      "2        0        0.00        5515.76         3408.98       221004.39   \n",
+      "3        1  1829483.99     1487550.43        11341.88      1955616.26   \n",
+      "4        1  1896098.71     1984761.74         4272.89      4621461.61   \n",
+      "...    ...         ...            ...             ...             ...   \n",
+      "2828     1    44750.61           0.00            0.00        36774.32   \n",
+      "2829     1    48872.52       44371.88            0.00            0.00   \n",
+      "2830     1   159147.57      114692.20         8725.44      2685684.29   \n",
+      "2831     4   211639.32     1327754.11            0.00        47447.71   \n",
+      "2832     1   277115.37       80316.78            0.00        22254.01   \n",
       "\n",
       "      newbalanceDest  \n",
-      "0            7168.14  \n",
-      "1          523596.49  \n",
-      "2               0.00  \n",
-      "3          329157.14  \n",
-      "4            9470.85  \n",
+      "0          979375.10  \n",
+      "1           19248.26  \n",
+      "2          232520.91  \n",
+      "3         1262732.45  \n",
+      "4         4871375.13  \n",
       "...              ...  \n",
-      "6504        59383.97  \n",
-      "6505       619362.38  \n",
-      "6506         2147.43  \n",
-      "6507            0.00  \n",
-      "6508            0.00  \n",
+      "2828        40753.28  \n",
+      "2829       309415.52  \n",
+      "2830      2281293.66  \n",
+      "2831      1482112.51  \n",
+      "2832       398175.15  \n",
       "\n",
-      "[6509 rows x 6 columns]\n"
+      "[2833 rows x 6 columns]\n",
+      "   type     amount  oldbalanceOrg  newbalanceOrig  oldbalanceDest  \\\n",
+      "0     1   29905.07        1543.89            0.00       140629.70   \n",
+      "1     1  270225.17      406329.36       150180.82        26306.17   \n",
+      "2     1  285916.36       42423.95            0.00        24541.21   \n",
+      "3     1   82684.44       22621.35            0.00       450411.88   \n",
+      "4     1  542039.41      948701.18         8554.52       939341.42   \n",
+      "5     0       0.00        3914.57        11645.81         7231.33   \n",
+      "6     1  297620.22       21346.82            0.00       892784.27   \n",
+      "7     1   10715.06       20280.66            0.00       128856.64   \n",
+      "8     4  249770.13       35751.28            0.00        39274.29   \n",
+      "9     1   14737.09     4394808.00      2429269.48       267215.53   \n",
+      "\n",
+      "   newbalanceDest  \n",
+      "0       273741.92  \n",
+      "1       205962.45  \n",
+      "2       337954.40  \n",
+      "3       976451.82  \n",
+      "4      1851172.65  \n",
+      "5        34670.92  \n",
+      "6       490837.69  \n",
+      "7       268586.31  \n",
+      "8       444407.97  \n",
+      "9            0.00  \n"
      ]
     }
    ],
-   "execution_count": 132
+   "execution_count": 8
   },
   {
    "metadata": {
